versions/v2.9/modules/en/pages/cluster-admin/kubernetes-resources/workloads-and-pods/deploy-workloads.adoc
= Deploying Workloads
:page-languages: [en, zh]
:revdate: 2025-03-17
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/deploy-workloads.adoc 
:product-path: cluster-admin/kubernetes-resources/workloads-and-pods/deploy-workloads.adoc
:description: Read this step by step guide for deploying workloads. Deploy a workload to run an application in one or more containers.
ifeval::["{build-type}" != "community"]
:xref-custom-clusters: xref:cluster-deployment/custom-clusters/custom-clusters.adoc
:xref-configmaps: xref:cluster-admin/kubernetes-resources/configmaps.adoc
:xref-infra-aws: xref:cluster-deployment/infra-providers/aws/aws.adoc
:xref-workloads-and-pods: xref:cluster-admin/kubernetes-resources/workloads-and-pods/workloads-and-pods.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-custom-clusters: xref:reference-guides/cluster-configuration/rancher-server-configuration/use-existing-nodes/index.adoc
:xref-configmaps: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/configmaps.adoc
:xref-infra-aws: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/create-an-amazon-ec2-cluster.adoc
:xref-workloads-and-pods: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/index.adoc
endif::[]

Deploy a workload to run an application in one or more containers.

. In the upper left corner, click *☰ > Cluster Management*.
. Go to the cluster where you want to upgrade a workload and click *Explore*.
. In the left navigation bar, click *Workload*.
. Click *Create*.
. Choose the type of workload.
. Select the namespace where the workload will be deployed.
. Enter a *Name* for the workload.
. From the *Container Image* field, enter the name of the Docker image that you want to deploy to the project, optionally prefacing it with the registry host (e.g. `quay.io`, `registry.gitlab.com`, etc.). During deployment, Rancher pulls this image from the specified public or private registry. If no registry host is provided, Rancher will pull the image from https://hub.docker.com/explore/[Docker Hub]. Enter the name exactly as it appears in the registry server, including any required path, and optionally including the desired tag (e.g. `registry.gitlab.com/user/path/image:tag`). If no tag is provided, the `latest` tag will be automatically used.
. Either select an existing namespace, or click *Add to a new namespace* and enter a new namespace.
. Click *Add Port* to enter a port mapping, which enables access to the application inside and outside of the cluster . For more information, see {xref-workloads-and-pods}#_services[Services].
. Configure the remaining options:
 ** *Environment Variables*
+
Use this section to either specify environment variables for your workload to consume on the fly, or to pull them from another source, such as a secret or {xref-configmaps}[ConfigMap].

 ** *Node Scheduling*
 ** *Health Check*
 ** *Volumes*
+
Use this section to add storage for your workload. You can manually specify the volume that you want to add, use a persistent volume claim to dynamically create a volume for the workload, or read data for a volume to use from a file such as a {xref-configmaps}[ConfigMap].
+
When you are deploying a Stateful Set, you should use a Volume Claim Template when using Persistent Volumes. This will ensure that Persistent Volumes are created dynamically when you scale your Stateful Set.

 ** *Scaling/Upgrade Policy*

+

[NOTE]
.Amazon Note for Volumes:
====
To mount an Amazon EBS volume:
 ** In https://aws.amazon.com/[Amazon AWS], the nodes must be in the same Availability Zone and possess IAM permissions to attach/unattach volumes.
 ** The cluster must be using the https://github.com/kubernetes/website/blob/release-1.18/content/en/docs/concepts/cluster-administration/cloud-providers.md#aws[AWS cloud provider] option. For more information on enabling this option see {xref-infra-aws}[Creating an Amazon EC2 Cluster] or {xref-custom-clusters}[Creating a Custom Cluster].
====

. Click *Show Advanced Options* and configure:
 ** *Command*
 ** *Networking*
 ** *Labels & Annotations*
 ** *Security and Host Config*
. Click *Launch*.

*Result:* The workload is deployed to the chosen namespace. You can view the workload's status from the project's *Workloads* view.
